# gcp-data-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
frontend/: Dockerfile  index.html  nginx.conf
functions/ingest/: main.py  requirements.txt
functions/latest/: main.py
functions/transform/: main.py
scripts/: package_functions.py
shared/: ingest.py  requirements.txt  transform.py
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: test_shared.py  test_smoke.py
